# oasis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_SCRIPT.txt  CLAUDE.md  DESERT_HEATMAP_SPEC.md  Dockerfile  EXACT_SCRIPT.txt  FIXGEO.md  GEOSPATIAL_SUMMARY.md  LICENSE  MAP_USAGE.md  PLAN.md  README.md  SCRIPT.md  TODO.md  VIDEO_SCRIPT.md  map_api.py  map_enhanced.html  map_local_test.html  map_local_test.html.backup  mcp_config.json  pyproject.toml  start_map.sh  start_public.sh  verify_claude_config.json  vf-ghana.csv  vf_ghana_clean.csv
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: deploy-webapp.yaml  pre-commit.yaml  publish.yaml  tests.yaml
HACK/: CHALLENGE.md
docs/: CUSTOM_DATASETS.md  DEVELOPMENT.md  GEOSPATIAL_SUMMARY.md  M4_APPS.md  OASIS_APPS.md  QUICKSTART.md  SKILLS.md  TOOLS.md
m4_data/datasets/: vf-ghana.json
oasis_data/: config.json
oasis_data/databases/: vf_ghana.duckdb
oasis_data/embeddings/: vf-ghana.npz
oasis_data/parquet/vf-ghana/: facilities.parquet
src/m4/: cli.py  mcp_server.py
src/m4/apps/: __init__.py
src/m4/apps/cohort_builder/: __init__.py  mcp-app.html  query_builder.py  tool.py  ui.py
src/m4/apps/cohort_builder/ui/: package-lock.json  package.json  vite.config.ts
src/m4/apps/cohort_builder/ui/src/: mcp-app.html  mcp-app.ts
src/m4/apps/geo_map/: __init__.py  mcp-app.html  tool.py
src/m4/apps/geo_map/ui/src/: mcp-app.html  mcp-app.ts
src/m4/core/backends/: __init__.py
src/m4/core/derived/: __init__.py
src/m4/core/tools/: __init__.py  geospatial.py  management.py
src/m4/databricks/: __init__.py  genie.py  rag.py  tracing.py
src/m4/skills/: __init__.py  installer.py
src/m4/skills/clinical/apsiii-score/: SKILL.md
src/m4/skills/clinical/equiflow/: PROVENANCE.yaml  SKILL.md
src/m4/skills/clinical/equiflow/scripts/: cohort_flow.py
src/m4/skills/clinical/gcs-calculation/: SKILL.md
src/m4/skills/clinical/hfrs/: PROVENANCE.yaml  SKILL.md
src/m4/skills/clinical/hfrs/references/: hfrs_codes.json  hfrs_icd_codes.csv
src/m4/skills/clinical/hfrs/scripts/: calculate_hfrs.py  calculate_hfrs.sql
src/m4/skills/clinical/kdigo-aki-staging/: SKILL.md
src/m4/skills/clinical/lods-score/: SKILL.md
src/m4/skills/clinical/oasis-score/: PROVENANCE.yaml
src/m4/skills/clinical/sofa-score/: SKILL.md
src/m4/skills/clinical/vasopressor-equivalents/: SKILL.md
src/m4/skills/system/create-m4-skill/: PROVENANCE.yaml
src/oasis/: __init__.py  api.py  cli.py  config.py  console.py  data_io.py  mcp_server.py
src/oasis/apps/: __init__.py
src/oasis/apps/geo_map/: __init__.py  mcp-app.html  tool.py  ui.py
src/oasis/apps/geo_map/ui/: package-lock.json  package.json  vite.config.ts
src/oasis/apps/geo_map/ui/src/: dev-mock.ts  mcp-app.html  mcp-app.ts
src/oasis/cleaning/: __init__.py  address_extraction.py  anomaly_detection.py  column_cleaning.py  geocoding.py  llm_extraction.py  normalization.py  parse_and_consolidate.py  pipeline.py
src/oasis/core/: __init__.py  datasets.py  exceptions.py  validation.py
src/oasis/core/backends/: __init__.py  base.py  duckdb.py
src/oasis/core/derived/: __init__.py
src/oasis/core/tools/: __init__.py  base.py  geospatial.py  management.py  notes.py  registry.py  tabular.py
src/oasis/databricks/: __init__.py  config.py  genie.py  rag.py  tracing.py
src/oasis/mcp_client_configs/: __init__.py  dynamic_mcp_config.py  setup_claude_desktop.py
src/oasis/skills/: SKILLS_INDEX.md  SKILL_FORMAT.md  __init__.py  installer.py
tests/: _test_openai.py  test_api.py  test_cli.py  test_config.py  test_config_scripts.py  test_data_io.py  test_dynamic_switching.py  test_integration.py  test_mcp_dataset_tools.py  test_mcp_serialization.py  test_mcp_server.py  test_skills_index.py
tests/apps/: __init__.py
tests/apps/cohort_builder/: __init__.py  test_mcp_integration.py  test_query_builder.py  test_tool.py
tests/core/: __init__.py  test_datasets.py  test_exceptions.py  test_serialization.py  test_validation.py
tests/core/backends/: __init__.py  test_base.py  test_duckdb.py  test_factory.py
tests/core/tools/: __init__.py  test_base.py  test_management.py  test_notes.py  test_registry.py  test_tabular.py
tests/utils/: auth_helpers.py
webapp/: README.md  package-lock.json  package.json
webapp/public/: index.html  manifest.json
webapp/src/components/: ArchitectureDiagram.js  CTA.js  Citation.js  Contact.js  Demos.js  Documentation.js  Explanation.js  Header.js  Hero.js  Installation.js  Paper.js
