[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "oasis-infra"
dynamic = ["version"]
description = "Orchestrated Agentic System for Intelligent healthcare Synthesis"
requires-python = ">=3.10"
authors = [
    { name = "Rafi Al Attrach", email = "rafiaa@mit.edu" },
    { name = "Pedro Moreira", email = "pedrojfm@mit.edu" },
    { name = "Rajna Fani", email = "rajnaf@mit.edu" },
]
maintainers = [
    { name = "Rafi Al Attrach", email = "rafiaa@mit.edu" },
    { name = "Pedro Moreira", email = "pedrojfm@mit.edu" },
    { name = "Rajna Fani", email = "rajnaf@mit.edu" },
]
readme = "README.md"
license = "MIT"
keywords = ["healthcare", "mcp", "llm", "medical", "duckdb", "ghana", "medical-deserts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "fastmcp>=2.14.0",
    "pyarrow>=10.0.0",
    "sqlparse>=0.4.0",
    "duckdb>=1.4.1",
    "mlflow>=2.16.0",
    "databricks-sdk>=0.30.0",
    "sentence-transformers>=3.0.0",
    "numpy>=2.2.6",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.10.0",
    "aiohttp>=3.8.0",  # For MCP client testing
]

[project.scripts]
oasis = "oasis.cli:app"
oasis-infra = "oasis.mcp_server:main"  # Primary entry point (enables `uvx oasis-infra`)
oasis-mcp = "oasis.mcp_server:main"  # Kept for backwards compatibility
oasis-mcp-server = "oasis.mcp_server:main"  # Kept for backwards compatibility

[project.urls]
Homepage = "https://github.com/hannesill/oasis"
Repository = "https://github.com/hannesill/oasis"
Documentation = "https://github.com/hannesill/oasis#readme"
Issues = "https://github.com/hannesill/oasis/issues"
Changelog = "https://github.com/hannesill/oasis/releases"

[tool.pdm.version]
source = "file"
path = "src/oasis/__init__.py"

[tool.pdm.build]
includes = ["src/oasis/", "src/oasis/skills/**/*.md", "src/oasis/apps/**/*.html"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "UP", # pyupgrade (modernize syntax)
    "RUF",# Ruff-specific rules
]

ignore = [
    "E501",  # Line too long (let ruff-format handle line length)
]

[tool.ruff.format]
# Ruff's default formatter will be used.

[tool.ruff.lint.isort]
known-first-party = ["oasis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = []
# Filter out Jupyter deprecation warning
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*",
]
